--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
 			<version>42.6.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.24.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
