--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.23.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
