Homework 4.4 first attempt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.show-sql=true
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 avatars.dir.path=avatars;
+
+logging.level.ru.hogwarts.school.service=DEBUG
+server.port=8080
+spring.profiles.active=port1
